# leoai

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  llama-oci-free-bootstrap.md  llama-oci-v3-advanced.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
ansible/: README.md  ansible.cfg
ansible/group_vars/: all.yml
ansible/inventory/: hosts.ini.example
ansible/playbooks/: bootstrap.yml  deploy.yml
ansible/templates/: leoai-api.service.j2  leoai-nginx.conf.j2
scripts/: bootstrap_infra.sh
src/leoai/: __init__.py  api.py  assistant.py  cli.py  config.py  embeddings.py  file_extractors.py  file_store.py  job_queue.py  knowledge_base.py  web_search.py
src/leoai/connectors/: __init__.py  object_storage_loader.py  web_loader.py
terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_api_files.py  test_config.py  test_file_extractors.py  test_knowledge_base_and_web_loader.py
