[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leoai"
version = "0.4.0"
description = "Starter do projeto de IA LeoAI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "oci>=2.173.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "python-pptx>=1.0.2",
  "Pillow>=10.4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[project.scripts]
leoai = "leoai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
